Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Settings__mdt/Driver_Portal_Settings__mdt.object-meta.xml
<CustomObject>
    <label>Driver Portal Setting</label>
    <pluralLabel>Driver Portal Settings</pluralLabel>
</CustomObject>