Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Settings__mdt/fields/Auto_Send_SMS__c.field-meta.xml
<CustomField>
    <fullName>Auto_Send_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Send SMS</label>
    <type>Checkbox</type>
</CustomField>