Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Settings__mdt/fields/Portal_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Portal_Page_URL__c</fullName>
    <label>Portal Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>