Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Settings__mdt/fields/Sync_Driver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sync_Driver_Contact__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Sync Driver Contact</label>
    <type>Checkbox</type>
</CustomField>