Features/DriverPortal/force-app/main/default/objects/Driver_Portal_Settings__mdt/fields/Token_Validity_Days__c.field-meta.xml
<CustomField>
    <fullName>Token_Validity_Days__c</fullName>
    <label>Token Validity Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>